@@ -1,6 +1,11 @@
+
 2009-08-03 Fixed boilerplate.py so it doesn't break the ReST docs. - JKS
 
-======================================================================
+
+2009-08-03 pylab no longer provides a load and save function.  These
+           are available in matplotlib.mlab, or you can use
+           numpy.loadtxt and numpy.savetxt for text files, or np.save
+           and np.load for binary numpy arrays. - JDH
 
 2009-07-31 Tagging 0.99.0.rc1 at 7314 - MGD
 
